[package]
name = "midpad"
description = "Command line utility to pad texts."
license = "MIT"
authors = ["Rhelv"]
homepage = "https://github.com/Rhelvetican/midpad"
repository = "https://github.com/Rhelvetican/midpad"
readme = "README.md"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"]}
anyhow = "1"
